[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "2019-day1"
path = "src/bin/2019/day1.rs"

[[bin]]
name = "2019-day2"
path = "src/bin/2019/day2.rs"

[[bin]]
name = "2019-day3"
path = "src/bin/2019/day3.rs"

[[bin]]
name = "2019-day4"
path = "src/bin/2019/day4.rs"

[[bin]]
name = "2019-day5"
path = "src/bin/2019/day5.rs"

[[bin]]
name = "2019-day6"
path = "src/bin/2019/day6.rs"

[[bin]]
name = "2019-day7"
path = "src/bin/2019/day7.rs"


[[bin]]
name = "2023-day1"
path = "src/bin/2023/day1.rs"

[[bin]]
name = "2023-day2"
path = "src/bin/2023/day2.rs"

[[bin]]
name = "2023-day3"
path = "src/bin/2023/day3.rs"


[[bin]]
name = "2023-day4"
path = "src/bin/2023/day4.rs"


[[bin]]
name = "2023-day5"
path = "src/bin/2023/day5.rs"

[[bin]]
name = "2023-day6"
path = "src/bin/2023/day6.rs"

[[bin]]
name = "2023-day7"
path = "src/bin/2023/day7.rs"

[[bin]]
name = "2023-day8"
path = "src/bin/2023/day8.rs"

[[bin]]
name = "2023-day9"
path = "src/bin/2023/day9.rs"

[[bin]]
name = "2023-day10"
path = "src/bin/2023/day10.rs"

[[bin]]
name = "2023-day11"
path = "src/bin/2023/day11.rs"

[[bin]]
name = "2023-day12"
path = "src/bin/2023/day12.rs"

[[bin]]
name = "2023-day18"
path = "src/bin/2023/day18.rs"

[dependencies]
itertools = "0.11.0"
regex = "1.10.2"
